--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ var initializeCastApi = function() {
   }
 
   console.log("Initialize...");
-  var sessionRequest = new chrome.cast.SessionRequest("137C3100");//F518AA60");
+  var sessionRequest = new chrome.cast.SessionRequest("467252E2");
   var apiConfig = new chrome.cast.ApiConfig(sessionRequest,
     sessionListener,
     receiverListener);
